Fixed copy and layout issues for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -565,23 +565,29 @@ h5{
 
 
 
-@media (min-width: 320px) and (max-width:767px){
+@media (min-width: 319px) and (max-width:767px){
     
 .cover{
     background-image: url(../img/mobile-cover.png);
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 70vh;
 }
 
 .cover-text{
-    bottom: 40%;
-    width: 50%;
-    font-size: 14px;
+    position: initial;
+    font-size: 24px;
+    width: calc(100% - 48px);
+    align-self: center;
 }
     
 .top-left-indicator{
     padding: 8px 16px 8px 16px;
-    font-size: 14px;
+    font-size: 24px;
     top: 24px;
-    left: 24px;
+    left: 8px;
     letter-spacing: 1px;
     line-height: 24px;
 }
@@ -601,7 +607,7 @@ h5{
 }    
 
 .content-section{
-    margin-top: 100px;
+    margin-top: 56px;
 }
     
 .projects-container{
@@ -673,8 +679,8 @@ h5{
 }
 
 .text-container p{
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 26px;
 }
 
 .text-container iframe{
@@ -699,9 +705,10 @@ h5{
 }
 
 .about-text{
-    padding: 16px;
-    font-size: 14px;
-    line-height: 24px;
+    padding: 0px;
+    border: none;
+    font-size: 16px;
+    line-height: 26px;
     margin-top: 40px;
 }
 
@@ -711,9 +718,6 @@ h5{
     padding-left: 24px;
     padding-right: 24px;
     margin-left: 0;
-    
-/*    padding: 80px 24px 100px 24px;*/
-    
 }
     
 .email{
@@ -733,7 +737,21 @@ h5{
 }
 
 @media (min-width:768px) and (max-width : 1024px) {
-    
+
+.cover{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: 70vh;
+}
+
+.cover-text{
+    position: initial;
+    font-size: 32px;
+    align-self: center;
+}    
+
 .cover-mouse-container{
     display: none;
 }
@@ -850,10 +868,9 @@ h5{
 }
 
 .top-left-indicator{
-    padding: 12px 20px 12px 20px;
-    font-size: 16px;
+    font-size: 24px;
     top: 60px;
-    left: 32px;
+    left: 40px;
     letter-spacing: 1px;
     line-height: 24px;
 }
